# rudn-study-4th-year

./: .gitmodules
data-mining/: .gitignore  requirements.txt
data-mining/lab1/: lab1.ipynb  reference1.ipynb
data-mining/lab2/: lab2.ipynb  reference2.ipynb
data-mining/lab3/: lab3.ipynb  reference3.ipynb
data-mining/lab4/: lab4.ipynb  reference4.ipynb
data-mining/lab5/: lab5.ipynb  reference5.ipynb
data-mining/lab6/: lab6.ipynb  reference6.ipynb
data-mining/lab7/: lab7.ipynb  reference.ipynb
english/: Data Extraction.xlsx  Makefile  cover_letter.docx  cover_letter.md  protocol.docx  protocol.md  review.docx  review.md  sources.bib
english/assets/: co-occurence.json
english/bib/: 0004370295001034.bib  0736584595000070.bib  B9780934613637500206.bib  B9780934613637500310.bib  S0004370210001578.bib  S000437022030031X.bib  S0020025512007748.bib  S0020025517307272.bib  S0921889021001081.bib  S0921889098000669.bib  S0952197614001468.bib  S0957417411006282.bib  S1389128621003029.bib  S1474667017341630.bib  cite.bib
english/pandoc/: apa.csl
english/sources/: 0004370295000550.bib  S0004370201001084.bib  S0004370202003624.bib  S0004370208001872.bib  S0004370212001051.bib  S0004370214000198.bib  S0004370214001386.bib  S0004370217301042.bib  S0004370296000471.bib  S0167739X19331784.bib  S092523121400808X.bib  (+9 more)
intelligent-systems/: .gitignore  requirements.txt
intelligent-systems/lab2/: .gitignore  Cargo.toml  generator.py
intelligent-systems/lab2/src/: main.rs  model.rs
system-design/: .gitignore  LICENSE  Makefile  package.yaml  system-design.cabal
(+11 files in other folders)
