[package]
name = "lab2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
structmap = "0.1.6"
structmap-derive = "0.1.6"
tokio = { version = "1.41.1", features = ["fs", "macros", "rt-multi-thread"] }
zen-engine = "0.35.0"
